--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "start": "ts-node src/index.js"
+    "start": "ts-node src/index.js",
+    "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
     "express": "^4.18.2",
