--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.9.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
