--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -9,11 +9,13 @@
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mongoose": "^6.9.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.0",
     "prettier": "^2.8.4",
