--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -4,9 +4,9 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "nodemon src/index.ts",
     "start": "ts-node src/index.js",
-    "dev:docker": "docker compose up",
+    "dev:docker": "docker compose down && docker compose up",
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
@@ -19,8 +19,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.0",
+    "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   }
 }
