--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.2",
     "ts-node": "^10.9.1"
