--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "start": "ts-node src/index.js",
-    "dev:docker": "docker compose down && docker compose up",
+    "dev:docker": "docker compose down && docker compose up --build",
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
