--- a/packages/webapp-client/package.json
+++ b/packages/webapp-client/package.json
@@ -10,6 +10,10 @@
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
