--- a/packages/watcher/package.json
+++ b/packages/watcher/package.json
@@ -9,9 +9,11 @@
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/node": "^18.14.4",
     "prettier": "^2.8.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
