--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "lerna": "^6.5.1"
   },
   "dependencies": {
+    "next": "^13.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "yarn": "^1.22.19"
   }
 }
