--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -14,6 +14,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.2",
+    "next": "^13.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
