--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "ts-node": "^10.9.1",
     "yarn": "^1.22.19"
   },
@@ -31,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.0",
     "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.8",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
