working auth strategy, router, private hashed pw info

--- a/packages/webapp-server/docker-compose.yaml
+++ b/packages/webapp-server/docker-compose.yaml
@@ -15,8 +15,8 @@ services:
       - mongodb
     environment:
       MONGODB_URI: mongodb://admin:password@mongodb:27017
-    # env_file:
-    #   - .env
+    env_file:
+      - .env
     volumes:
       - .:/app
       - /app/node_modules
