--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -13,6 +13,7 @@
     "@types/passport-github": "^1.1.7",
     "@types/passport-google-oauth20": "^2.0.11",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.0",
