--- a/packages/webapp-client/package.json
+++ b/packages/webapp-client/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.58.3",
+    "swr": "^2.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
