--- a/packages/webapp-client/package.json
+++ b/packages/webapp-client/package.json
@@ -18,6 +18,7 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
