--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "passport": "^0.6.0",
@@ -29,6 +30,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.6",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.0",
     "@types/passport": "^1.0.12",
