--- a/packages/webapp-client/package.json
+++ b/packages/webapp-client/package.json
@@ -21,6 +21,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.8.2",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
   },
