--- a/packages/watcher/package.json
+++ b/packages/watcher/package.json
@@ -4,19 +4,20 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
     "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\""
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^1.3.4",
     "joi": "^17.8.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "@types/node": "^18.14.4",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@types/node": "^18.14.4",
+    "@types/jest": "^29.4.0",
+    "jest": "^29.5.0",
     "prettier": "^2.8.4",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5"
+    "ts-jest": "^29.0.5"
   }
 }
