--- a/packages/watcher/package.json
+++ b/packages/watcher/package.json
@@ -8,10 +8,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/node": "^18.14.4",
     "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "joi": "^17.8.3",
     "ts-node": "^10.9.1",
-    "@types/node": "^18.14.4",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
