--- a/packages/webapp-client/package.json
+++ b/packages/webapp-client/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.11.9",
     "@mui/joy": "^5.0.0-alpha.70",
     "@mui/material": "^5.11.12",
     "@next/font": "13.1.6",
+    "@types/mdx": "^2.0.4",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "cors": "^2.8.5",
     "axios": "^1.3.4",
+    "cors": "^2.8.5",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -29,6 +32,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@mdx-js/loader": "^2.3.0",
     "prettier": "^2.8.4"
   }
 }
