--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -10,6 +10,8 @@
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@types/cors": "^2.8.13",
     "@types/passport-github": "^1.1.7",
     "@types/passport-google-oauth20": "^2.0.11",
