update env variables to root of default values

--- a/packages/watcher-chart/templates/deployment.yaml
+++ b/packages/watcher-chart/templates/deployment.yaml
@@ -19,13 +19,13 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-            {{- if .Values.podwatch.customServerUrl }}
+            {{- if .Values.customServerUrl }}
             - name: PODWATCH_CUSTOM_SERVER_URL
-              value: {{ .Values.podwatch.customServerUrl | quote }}
+              value: {{ .Values.customServerUrl | quote }}
             {{- else }}
             - name: PODWATCH_CLIENT_ID
-              value: {{ .Values.podwatch.clientId | quote }}
+              value: {{ .Values.clientId | quote }}
             - name: PODWATCH_CLIENT_SECRET
-              value: {{ .Values.podwatch.clientSecret | quote }}
+              value: {{ .Values.clientSecret | quote }}
             {{- end }}
       serviceAccountName: {{ .Values.serviceAccount.name }}
