update secret to be optional in example config

--- a/packages/watcher/examples/podwatch-deployment.yaml
+++ b/packages/watcher/examples/podwatch-deployment.yaml
@@ -20,4 +20,5 @@ spec:
                 name: podwatch-config
             - secretRef:
                 name: podwatch-secrets
+                optional: true
       serviceAccountName: podwatch-serviceaccount
