--- a/packages/webapp-client/package.json
+++ b/packages/webapp-client/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/mdx": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
+    "@mdx-js/runtime": "^1.6.22",
     "@mui/icons-material": "^5.11.9",
     "@mui/joy": "^5.0.0-alpha.70",
     "@mui/material": "^5.11.12",
@@ -25,14 +27,17 @@
     "axios": "^1.3.4",
     "cors": "^2.8.5",
     "next": "13.1.6",
+    "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.58.3",
     "swr": "^2.1.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@mdx-js/loader": "^2.3.0",
-    "prettier": "^2.8.4"
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "prettier": "^2.8.4",
+    "react-syntax-highlighter": "^15.5.0"
   }
 }
