--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "next": "^13.2.3",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
