everything but the router up to date

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lerna": "^6.5.1"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "next": "^13.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
