--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
+    "@slack/bolt": "^3.13.0",
+    "@slack/web-api": "^6.8.1",
     "@types/cors": "^2.8.13",
     "@types/passport-github": "^1.1.7",
     "@types/passport-google-oauth20": "^2.0.11",
