--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -18,6 +18,7 @@
     "@types/cors": "^2.8.13",
     "@types/passport-github": "^1.1.7",
     "@types/passport-google-oauth20": "^2.0.11",
+    "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -34,7 +35,9 @@
     "passport-jwt": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-node": "^10.9.1"
+    "slackbots": "^1.3.0",
+    "ts-node": "^10.9.1",
+    "yargs": "^17.7.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
