--- a/packages/webapp-client/tsconfig.json
+++ b/packages/webapp-client/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -21,9 +17,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   },
   "include": [
@@ -31,9 +25,9 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.mdx",
-    "src/**/*.mdx"
+    "src/**/*.mdx",
+    "src/components/LandingContent/LandingContent.tsx.old",
+    "src/components/LandingContent/LandingContent.tsx.old"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
