--- a/packages/watcher-chart/templates/secret.yaml
+++ b/packages/watcher-chart/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.secrets.PODWATCH_CLIENT_SECRET }}
+{{- if .Values.secrets.clientSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,5 +6,5 @@ metadata:
 type: Opaque
 data:
 
-  PODWATCH_CLIENT_SECRET: {{ .Values.secrets.PODWATCH_CLIENT_SECRET }}
+  PODWATCH_CLIENT_SECRET: {{ .Values.secrets.clientSecret | b64enc }}
 {{- end }}
