--- a/packages/webapp-server/package.json
+++ b/packages/webapp-server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
+    "@slack/web-api": "^6.8.1",
     "@types/cors": "^2.8.13",
     "@types/passport-github": "^1.1.7",
     "@types/passport-google-oauth20": "^2.0.11",
@@ -42,6 +43,7 @@
     "@types/node": "^18.14.0",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
+    "@types/twilio": "^3.19.3",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
