--- a/packages/watcher/examples/podwatch-deployment.yaml
+++ b/packages/watcher/examples/podwatch-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: podwatch
-          image: wvaviator/podwatch:latest
+          image: podwatch/watcher:latest
           envFrom:
             - configMapRef:
                 name: podwatch-config
